# heeeeeeeeeeeeeeeeeeeeeeeexxxxxxxxxxaaaaaa

./: .replit  app.py  build_app.py  create_item_assignment_table.py  create_render_deployment.py  gunicorn_config.py  hexamed.db  main.py  migrate_db.py  migrate_to_postgresql.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  schema.sql  setup_supabase.py  setup_tables.py  test_postgres_connection.py  test_render_connection.py
attached_assets/: Pasted-Traceback-most-recent-call-last-File-opt-render-project-src-venv-bin-gunicorn-line-8-in--1754897115434_1754897115436.txt  Pasted-urchase-Order-Generation-for-Regular-and-Specific-Items-Item-Type-Selection-Input-User-SCM-sele-1754461501110_1754461501118.txt
static/: style.css
templates/: activity.html  add_asset.html  add_maintenance.html  add_quotation.html  add_vendor.html  admin.html  analytics.html  asset_assignments.html  asset_detail.html  asset_lifecycle.html  asset_limits.html  assets.html  assign_from_asset.html  assign_item.html  assignments.html  base.html  bills.html  bulk_upload_assets.html  bulk_upload_vendors.html  classify_item.html  create_po_from_request.html  create_purchase_order.html  custom_reports.html  dashboard.html  depreciation.html  edit_request.html  edit_vendor.html  fulfill_request.html  login.html  maintenance.html  md_review_po.html  print_purchase_order.html  purchase_order_detail.html  purchase_orders.html  quotations.html  request_form.html  requests.html  scm_upload_bill.html  update_inventory.html  update_po_vendor.html  (+3 more)
(+1 files in other folders)
